<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:id="@+id/layout_title"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black_deep"
        >
        <TextView
            android:id="@+id/text_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="微信"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            />
        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/em_add"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            />
    </RelativeLayout>

    <cn.ucai.superwechat.widget.MFViewPager
        android:layout_below="@id/layout_title"
        android:id="@+id/layout_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="48dp"
        ></cn.ucai.superwechat.widget.MFViewPager>
<LinearLayout
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />
    <cn.ucai.superwechat.widget.DMTabHost
        android:id="@+id/layout_host"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:paddingBottom="1dp"
        >
        <cn.ucai.superwechat.widget.DMTabButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawableTop="@drawable/tab_weixin"
            app:tabtext="@string/app_name"
            ></cn.ucai.superwechat.widget.DMTabButton>
        <cn.ucai.superwechat.widget.DMTabButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawableTop="@drawable/tab_contact_list"
            app:tabtext="@string/contacts"
            ></cn.ucai.superwechat.widget.DMTabButton>
        <cn.ucai.superwechat.widget.DMTabButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawableTop="@drawable/tab_find"
            app:tabtext="@string/discover"
            ></cn.ucai.superwechat.widget.DMTabButton>
        <cn.ucai.superwechat.widget.DMTabButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawableTop="@drawable/tab_profile"
            app:tabtext="@string/me"
            ></cn.ucai.superwechat.widget.DMTabButton>
    </cn.ucai.superwechat.widget.DMTabHost>
</LinearLayout>
</RelativeLayout>